docs/i18n/tr/docusaurus-plugin-content-docs/version-1.2/shortcuts.md
---
title: Kısayollar
---

Düzenleyicide kullanabileceğiniz birkaç kısayol vardır. Bazıları düğmelerin altında yazılmıştır.

## Genel

* `Ctrl` + `N`: Yeni dosya
* `Ctrl` + `Shift` + `N`: Şablondan yeni dosya
* `Ctrl` + `O`: Dosya aç
* `Ctrl` + `I`: Dosyayı içe aktar
* `Ctrl` + `E`: Dosyayı dışa aktar
* `Ctrl` + `Shift` + `E`: Resim olarak dışa aktar
* `Ctrl` + `Alt` + `E`: SVG olarak dışa aktar
* `Ctrl` + `Alt` + `S`: Ayarları aç

## Proje

* `Ctrl` + `Z`: Geri al
* `Ctrl` + `Y`: Yinele
* `Ctrl` + `Alt` + `N`: İletişim kutusu ekle'yi aç
* `Ctrl` + `Alt` + `Shift` + `S`: Proje ayarlarını aç
* `Ctrl` + `Shift` + `P`: Yer imleri iletişim kutusunu aç
* `Ctrl` + `P`: Renk paleti iletişim kutusunu aç
* `Ctrl` + `B`: Arkaplan iletişim kutusunu aç
* `Ctrl` + `L`: Katmanlar iletişim kutusunu aç
* `Ctrl` + `S`: Yolu değiştir
